se agregan imagenes para el inicio de la pagina

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,3 +22,15 @@
     background-color: aqua;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+#image-ppal {
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.image-ppal2 {
+   width: inherit;
+   height: inherit;
+}
